Bug 128057 - To link an mp4-video file with a "#" in the file name creates the error "Das Format der ausgewählten Datei wird nicht unterstützt."
Summary: To link an mp4-video file with a "#" in the file name creates the error "Das ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-09 18:27 UTC by Stephan
Modified: 2019-10-10 07:31 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stephan 2019-10-09 18:27:17 UTC
Description:
The file name "simple#1.mp4" creates the error "Das Format der ausgewählten Datei wird nicht unterstützt."

By simple changing the file name to "simple_1.mp4" the very same file is accepted and the video is integrated without problem into the Impress presentation.

Steps to Reproduce:
1. Take an mp4 file and name it "simple_1.mp4"; insert it into your presentation; it should be running smoothly. (Inserting it through the menu point "Einfügen" -> "Audio/Video ..." -> selecting this file "simple_1.mp4")

2.Rename this file to "simple#1.mp4" and try to insert it into your presentation in the very same way. You will get the error message "Das Format der ausgewählten Datei wird nicht unterstützt." (at least in the German version of LibreOffice 6.2.7.1)


Actual Results:
"Das Format der ausgewählten Datei wird nicht unterstützt."

Expected Results:
The video should be integrated into the presentation independently if its name is "simple_1.mp4" or "simple#1.mp4


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Mike Kaganski 2019-10-09 20:48:48 UTC
Repro with Version: 6.3.2.2 (x64)
Build ID: 98b30e735bda24bc04ab42594c85f7fd8be07b9c
CPU threads: 12; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

and with OpenOffice.org 3.2.0 OOO320m12 (Build:9483)

The problem is the call to IGraphBuilder::RenderFile [1] in avmedia::win::Player::create (avmedia/source/win/player.cxx), which seems to handle file URIs, but not doing that correctly, and failing when the URI has URI-encoded characters like %23 for #. So the problem is likely Windows-specific.

[1] https://docs.microsoft.com/en-us/previous-versions/ms785796
Comment 2 Mike Kaganski 2019-10-09 20:58:52 UTC
https://gerrit.libreoffice.org/80567
Comment 3 Commit Notification 2019-10-10 07:31:51 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/37fe8619728b2179e6c1d3f25eeee85755dcd40a

tdf#128057: convert file URIs to system path for IGraphBuilder::RenderFile

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.