tdf#128057: convert file URIs to system path for IGraphBuilder::RenderFile

It seems to handle file URIs incorrectly, failing when the characters in the
URI are URI-encoded like %23 for #.

Change-Id: Ibc1e27ce38d65781cdb8278c4787aafa00092754